@@ -3,6 +3,11 @@
 
 2011-10-03  bowbow99  <bowbow99@gmail.com>
 
+	* `lisp:otherwise` が元々存在してたことが発覚した（thx to @miyamuko）
+	ので shadowing-export はやめて `lisp:otherwise` を使うように。
+	`case` は xyzzy オリジナルの物とは `t` や `otherwise` を途中に置いた
+	場合の挙動が違うのでとりあえずそのまま。
+
 	* 細々したものを追加
 	- `type-of` （structure 名を返すように）
 	- `special-operator-p`
